testsuite/poke.pkl/format-diag-4.pk
/* { dg-do compile } */

format ("%f32bAB", 1U); /* { dg-error "" } */
